Fixes https://github.com/wildfly-security/wildfly-elytron/pull/1788